# test-setup-py

./: README.md  local.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
demopublicpythonproject/: __init__.py  __main__.py
demopublicpythonproject/framework/: __init__.py
testsetuppy/: __init__.py
