[metadata]
name = test-setup-py
license = Apache License 2.0
author = GreenDeploy.io
author_email = developers@greendeploy.io
description = This is to demo how to use setup.py and pip-tools for layered requirements
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Systems Administration

[options]
python_requires = >=3.8
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    # pep517 ~= 0.12
    pip-tools ~= 6.5
    pip ~= 21.3
    # indirect dependencies
    # setuptools ~= 60.8  # typically needed when pip-tools invokes setup.py
    # wheel ~= 0.37 # pip plugin needed by pip-tools
extras_require =
    local = pytest
