[metadata]
name = demo-public-python-project

[options]
python_requires = >=3.8
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    pep517
    pip-tools ~= 6.5; python_version > '3.6'
    pip ~= 21.3
    pyfiglet ~= 0.7
    # indirect dependencies
    setuptools >= 38.0  # typically needed when pip-tools invokes setup.py
    wheel  # pip plugin needed by pip-tools

[options.extras_require]
    local =
        setuptools_scm >= 6.4.2

# this is for entry point for the cli
# see https://amir.rachum.com/blog/2017/07/28/python-entry-points/ to learn more abt entry points
[options.entry_points]
    console_scripts =
        demopublicpythonproject = demopublicpythonproject.framework:main